syntax = "proto3";
package com.banking_portal.constants.dto;


option java_package = "com.banking_portal.constants.dto";
option java_multiple_files = true;


message PaymentRequestDTO {
  string uid=1;
  string sender_account_id=2;
  string receiver_account_id=3;
  string transactional_note=4;
  double amount=5;
}
message PaymentResponseDTO{
  string transaction_id=1;
  string sender_account_id=2;
  string receiver_account_id=3;
  string transactional_note=4;
  double amount=5;

}




