syntax = "proto3";

package com.banking_portal.constants.dto;


option java_package = "com.banking_portal.constants.dto";
option java_multiple_files= true;

message SignUpRequestDTO {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string phone_number = 4;
  string aadhar = 5;
  string address = 6;
  string dob = 7;
  string password = 8;
  string re_password = 9;
}
message LoginRequestDTO{
  string phone_number = 1;
  string password = 2;
}


message SignUpResponseDTO {
  string uid = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone_number = 5;
  string aadhar = 6;
  string address = 7;
  string dob = 8;
  string password = 9;
  string re_password = 10;
}
message LoginResponseDTO{
  string uid=1;
  string phone_number = 2;
  string name=3;
  optional string password = 4;
  string jwtToken = 5;
}

