

syntax = "proto3";

package com.banking_portal.constants.dto;
import "google/protobuf/timestamp.proto";


option java_package = "com.banking_portal.constants.dto";
option java_multiple_files = true;

message AccountEntity {
  string accountId = 1; // Unique ID for the account
  string uid = 2;    // Associated user ID
  double balance = 3;   // Account balance
  string type = 4;
  google.protobuf.Timestamp created_ts=5;
  google.protobuf.Timestamp updated_ts=6;
  // Account type: "savings" or "current"
}

message GetAccountResponse {
  repeated AccountEntity accounts=1;
}
message AccountIdEntity{
  string account_id=1;
  string uid=2;
  string type_of_account=3;
}
